# new

cpp/: .envrc  .gitignore  CMakeLists.txt  GNUmakefile  Pipfile  compile_commands.json
cpp/doc/: Makefile
cpp/doc/doxygen/: doxygen.config
cpp/doc/sphinx/: Makefile
cpp/doc/sphinx/source/: conf.py  index.rst
cpp/src/: lib.cpp  lib.h  lib2.cpp  lib2.h  main.cpp
ruby/: .envrc  .fasterer.yml  .gitignore  .overcommit.yml  .reek.yml  .rubocop.yml  CODE_OF_CONDUCT.md  Gemfile  LICENSE.txt  Rakefile  TODO  ruby.gemspec
ruby/.overcommit/: Gemfile
ruby/lib/: ruby_gem.rb
ruby/spec/: ruby_gem_spec.rb  spec_helper.rb
